package com.itmo.mrdvd.builder;

public enum ProcessStatus {
  FAILURE,
  SUCCESS
}
